sorting and creation fixed

--- a/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
@@ -18,7 +18,7 @@
         <div class="properties">
             <div class="order-list2">
                 <div class="sorters">
-                    <p>Priority Settings</p>
+                    <p>Sort By:</p>
                     <button onclick="sortTable(3)" class="btn">Begin Date</button>
                     <button onclick="sortTable(0)" class="btn">Order ID</button>
                 </div>
