--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -30,7 +30,8 @@
                                 <span asp-validation-for="TrainingOrder.skill" class="text-danger"></span>
                             </div>
                             <input asp-for="TrainingOrder.skill" class="form-control" />
-
+                            <input asp-for="TrainingOrder.createDate" type="hidden" value="@Model.day"/>
+                            <input asp-for="TrainingOrder.trainers" type="hidden" value="@Model.newList"/>
                         </div>
                         <div class="form-group">
                             <div class="labels">
@@ -44,14 +45,14 @@
                                 <p class="control-label">Begin Date*</p>
                                 <span asp-validation-for="TrainingOrder.beginDate" class="text-danger"></span>
                             </div>
-                            <input asp-for="TrainingOrder.beginDate" class="form-control" />
+                            <input type="date" asp-for="TrainingOrder.beginDate" class="form-control" />
                         </div>
                         <div class="form-group">
                             <div class="labels">
                                 <p class="control-label">End Date*</p>
                                 <span asp-validation-for="TrainingOrder.endDate" class="text-danger"></span>
                             </div>
-                            <input asp-for="TrainingOrder.endDate" class="form-control" />
+                            <input type="date" asp-for="TrainingOrder.endDate" class="form-control" />
                         </div>
                         <div class="form-group">
                             <div class="labels">
@@ -80,39 +81,18 @@
                             <input asp-for="TrainingOrder.description" class="form-control" />
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Create" class="btn" />
+                            <input type="submit" value="Create" class="btn btn2" />
                         </div>
                     </form>
                 </div>
 
                 <a asp-page="Index">
-                    <button class="btn1">Return To Menu</button>
+                    <button class="btn btn1">Return To Menu</button>
                 </a>
             </div>
         </div>
     </div>
 </div>
-
-<script>
-    var indiButton = document.getElementById("indiButton");
-    var groupButton = document.getElementById("groupButton");
-
-    var individual = document.getElementById("individual");
-    var groups = document.getElementById("groups");
-
-    indiButton.addEventListener("click", function () {
-        groups.style.display = "none";
-        groups.selectedIndex = -1;
-        individual.style.display = "block";
-    });
-
-    groupButton.addEventListener("click", function () {
-        groups.style.display = "block";
-        individual.style.display = "none";
-        individual.selectedIndex = -1;
-    });
-
-</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
