--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -19,7 +19,7 @@
         <div class="properties">
             <div class="user-form">
                 <p class="title">Edit Training Order</p>
-                <hr />
+                <hr/>
                 <div class="field-container">
                     <form method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -29,10 +29,24 @@
                             <input value="Active" class="form-control" />
                         </div>
                         <div class="form-group">
-                            <label asp-for="TrainingOrder.trainers" class="control-label"></label>
-                            <input asp-for="TrainingOrder.trainers" class="form-control" />
-                            <span asp-validation-for="TrainingOrder.trainers" class="text-danger"></span>
+                            <div class="labels">
+                                <p class="control-label">Trainers</p> 
+                                <span asp-validation-for="TrainingOrder.trainers" class="text-danger"></span>
+                            </div>
+
+                            <div class="selectors">
+                                <button class="dropdown-btn" id="indiButton">Individual</button>
+                                <button class="dropdown-btn" id="groupButton">Groups</button>
+                            </div>
+
+                            <select id="individual" style="display: none" asp-for="TrainingOrder.trainers" class="form-drop2">
+                                <option value="Placeholder">Placeholder</option>
+                            </select>
+                            <select id="groups" style="display: none" asp-for="TrainingOrder.trainers" class="form-drop2">
+                                <option value="Placeholder">Placeholder</option>
+                            </select>
                         </div>
+
                         <div class="form-group">
                             <label asp-for="TrainingOrder.trainee" class="control-label"></label>
                             <input asp-for="TrainingOrder.trainee" class="form-control" />
@@ -64,21 +78,46 @@
                             <span asp-validation-for="TrainingOrder.description" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Save" class="btn btn-primary" />
+                            <input type="submit" value="Save" class="btn btn2" />
                         </div>
+
                     </form>
                 </div>
 
                 <a asp-page="Index">
-                    <button class="btn1">Return To Menu</button>
+                    <button class="btn btn1">Return To Menu</button>
                 </a>
+
                 <a asp-page="Index">
-                    <button class="btn3">Verify Completion</button>
+                    <button class="btn btn3">Verify Completion</button>
                 </a>
+
             </div>
         </div>
     </div>
 </div>
+
+<script>
+
+    var indiButton = document.getElementById("indiButton");
+    var groupButton = document.getElementById("groupButton");
+
+    var individual = document.getElementById("individual");
+    var groups = document.getElementById("groups");
+
+    indiButton.addEventListener("click", function () {
+        groups.style.display = "none";
+        groups.selectedIndex = -1;
+        individual.style.display = "block";
+    });
+
+    groupButton.addEventListener("click", function () {
+        groups.style.display = "block";
+        individual.style.display = "none";
+        individual.selectedIndex = -1;
+    });
+
+</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
