--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -34,6 +34,7 @@
                             <input asp-for="TrainingOrder.trainers" type="hidden" value="@Model.newList"/>
                             <input asp-for="TrainingOrder.beginDate" type="hidden" value="@Model.day" />
                             <input asp-for="TrainingOrder.endDate" type="hidden" value="@Model.day" />
+                            <input asp-for="TrainingOrder.status" type="hidden" value="Awaiting Approval" />
 
                         </div>
                         <div class="form-group">
@@ -62,6 +63,13 @@
                                 <span asp-validation-for="TrainingOrder.medium" class="text-danger"></span>
                             </div>
                             <input asp-for="TrainingOrder.medium" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <div class="labels">
+                                <p class="control-label">Session Duration* (Hours)</p>
+                                <span asp-validation-for="TrainingOrder.duration" class="text-danger"></span>
+                            </div>
+                            <input asp-for="TrainingOrder.duration" class="form-control" />
                         </div>
                         <div class="form-group">
                             <div class="labels">
