--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -22,10 +22,11 @@
             <div class="order-list">
                 <ul>
                     @foreach (var item in Model.TrainingOrder) {
-                        <li>
+                        <li class="@item.status.ToString()">
                             <a asp-page="./Details" asp-route-id="@item.Id" class="info">
                                 <div class="title">Training Order ID: @Html.DisplayFor(modelItem => item.Id)</div>
                                 <div class="sub">Trainee - @Html.DisplayFor(modelItem => item.trainee)</div>
+                                <div class="sub">Status - @Html.DisplayFor(modelItem => item.status)</div>
                             </a>
                             <div class="buttons">
                                 <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
@@ -43,23 +44,55 @@
                 <div class="selections">
                     <p class="title">Show in List:</p>
                     <div class="section">
-                        <input type="checkbox" name="Completed" />
+                        <input type="checkbox" id="co" onchange="completed(this)"/>
                         <p class="info">Completed</p>
                     </div>
                     <div class="section">
-                        <input type="checkbox" name="Ongoing" />
-                        <p class="info">Ongoing</p>
+                        <input type="checkbox" id="ac" onchange="active(this)" />
+                        <p class="info">Active</p>
                     </div>
                     <div class="section">
-                        <input type="checkbox" name="Awaiting Approval" />
+                        <input type="checkbox" id="aw" onchange="awaiting(this)" />
                         <p class="info">Awaiting Approval</p>
                     </div>
                 </div>
                 <div class="buttons">
                     <a asp-page="Create">Create New Order</a>
                 </div>
+                <div class="buttons">
+                    <a asp-page="AllView">Database Planning</a>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+<script>
+    const co = document.querySelector('#co')
+    const ac = document.querySelector('#ac')
+    const aw = document.querySelector('#aw')
+
+    co.checked = true
+    ac.checked = true
+    aw.checked = true
+
+    function toggleDisplay(className, show) {
+        var elements = document.getElementsByClassName(className);
+        for (var i = 0; i < elements.length; i++) {
+            elements[i].style.display = show ? "flex" : "none";
+        }
+    }
+
+    function completed(checkboxElem) {
+        toggleDisplay("Completed", checkboxElem.checked);
+    }
+
+    function awaiting(checkboxElem) {
+        toggleDisplay("Awaiting Approval", checkboxElem.checked);
+    }
+
+    function active(checkboxElem) {
+        toggleDisplay("Active", checkboxElem.checked);
+    }
+</script>
 
