--- a/WCSTrainer/Pages/TrainingOrders/Delete.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Delete.cshtml
@@ -23,11 +23,11 @@
                 <hr />
 
                 <form method="post">
-                    <button class="btn btn3">Delete</button>
+                    <button class="btn btnRed">Delete</button>
                 </form>
 
                 <a asp-page="./Index">
-                    <button class="btn btn1">Return To Menu</button>
+                    <button class="btn btnBlue">Return To Menu</button>
                 </a>
             </div>
         </div>
