--- a/WCSTrainer/Pages/Shared/_Layout.cshtml.css
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml.css
@@ -1,39 +1,1 @@
-﻿* {
-    padding: 0;
-    margin: 0;
-}
-
-nav {
-    top: 0;
-    display: flex;
-    width: 100%;
-    background-color: #33393C;
-    min-height: 60px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 50px;
-}
-
-    nav ul {
-        display: flex;
-        flex-direction: row;
-        width: 1500px;
-        max-width: 80%;
-        align-items: center;
-    }
-
-    nav li {
-        list-style: none;
-        height: 100%;
-        min-width: 100px;
-    }
-
-li a {
-    font-style: normal;
-    color: white;
-    margin-right: 30px;
-    max-height: 100%;
-    font-size: 20px;
-    text-decoration: none;
-}
+﻿
