--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -7,6 +7,7 @@
 
 <div class="panel">
     <div class="body">
+
         <div class="side-bar">
             <div class="ul">
                 <a href=""><div class="li">Statistics</div></a>
@@ -16,11 +17,14 @@
                 <a href=""><div class="li">Account Settings</div></a>
             </div>
         </div>
+
         <div class="properties">
             <div class="user-form">
+
                 <p class="title">Create New Training Order</p>
                 <p class="description">Fill out each required field.</p>
                 <hr />
+
                 <div class="field-container">
                     <form method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -32,18 +36,16 @@
                             <input asp-for="TrainingOrder.trainee" class="form-control" />
                             <input asp-for="TrainingOrder.createDate" type="hidden" value="@Model.day"/>
                             <input asp-for="TrainingOrder.trainers" type="hidden" value="@Model.newList"/>
-                            <input asp-for="TrainingOrder.beginDate" type="hidden" value="@Model.day" />
-                            <input asp-for="TrainingOrder.endDate" type="hidden" value="@Model.day" />
-                            <input asp-for="TrainingOrder.status" type="hidden" value="Awaiting Approval" />
-
+                            <input asp-for="TrainingOrder.beginDate" type="hidden" value="@Model.day"/>
+                            <input asp-for="TrainingOrder.endDate" type="hidden" value="@Model.day"/>
+                            <input asp-for="TrainingOrder.status" type="hidden" value="Awaiting Approval"/>
                         </div>
                         <div class="form-group">
                             <div class="labels">
                                 <p class="control-label">Skill*</p>
                                 <span asp-validation-for="TrainingOrder.skill" class="text-danger"></span>
                             </div>
-                            <input asp-for="TrainingOrder.skill" class="form-control" />
-                            
+                            <input asp-for="TrainingOrder.skill" class="form-control"/>
                         </div>
                         <div class="form-group">
                             <div class="labels">
@@ -79,13 +81,13 @@
                             <input asp-for="TrainingOrder.description" class="form-control" />
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Create" class="btn btn2" />
+                            <input type="submit" value="Create" class="btn btnGreen" />
                         </div>
                     </form>
                 </div>
 
                 <a asp-page="Index">
-                    <button class="btn btn1">Return To Menu</button>
+                    <button class="btn btnBlue">Return To Menu</button>
                 </a>
             </div>
         </div>
